v0.11/_sources/examples/calculations/Angle_to_Direction.rst.txt
.. note::
    :class: sphx-glr-download-link-note

    Click :ref:`here <sphx_glr_download_examples_calculations_Angle_to_Direction.py>` to download the full example code
.. rst-class:: sphx-glr-example-title

.. _sphx_glr_examples_calculations_Angle_to_Direction.py:


Angle to Direction
==================

Demonstrate how to convert angles to direction strings.

The code below shows how to convert angles into directional text.
It also  demonstrates the function's flexibility.


.. code-block:: default

    import metpy.calc as mpcalc
    from metpy.units import units







Create a test value of an angle


.. code-block:: default

    angle_deg = 70 * units('degree')
    print(angle_deg)





.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none

    70 degree



Now throw that angle into the function to
get the corresponding direction


.. code-block:: default

    dir_str = mpcalc.angle_to_direction(angle_deg)
    print(dir_str)





.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none

    ENE



The function can also handle array of angles,
rounding to the nearest direction, handling angles > 360,
and defaulting to degrees if no units are specified.


.. code-block:: default

    angle_deg_list = [0, 361, 719]
    dir_str_list = mpcalc.angle_to_direction(angle_deg_list)
    print(dir_str_list)





.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none

    ('N', 'N', 'N')



If you want the unabbrieviated version, input full=True


.. code-block:: default

    full_dir_str_list = mpcalc.angle_to_direction(angle_deg_list, full=True)
    print(full_dir_str_list)




.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none

    ['North', 'North', 'North']




.. rst-class:: sphx-glr-timing

   **Total running time of the script:** ( 0 minutes  0.074 seconds)


.. _sphx_glr_download_examples_calculations_Angle_to_Direction.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download

     :download:`Download Python source code: Angle_to_Direction.py <Angle_to_Direction.py>`



  .. container:: sphx-glr-download

     :download:`Download Jupyter notebook: Angle_to_Direction.ipynb <Angle_to_Direction.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
